@@ -188,6 +188,49 @@ int main(int argc, char *argv[])
     fullprint << "logn*logu:" << result << std::endl;
     // graph = result.drawPDF(1024);
     // graph.draw("logn_fois_logu.png");
+    // Ticket #917
+    // X+Y
+    result = Weibull() + Exponential();
+    fullprint << "result=" << result << std::endl;
+    fullprint << "cdf(1.0)=" << result.computeCDF(1.0) << std::endl;
+    // -X+Y->bug using operators, as -X returns a smart pointer,
+    // which is promoted into a Scalar by +!
+    //result = (Weibull() * (-1.0)) + Exponential();
+    //fullprint << "result=" << result << std::endl;
+    //fullprint << "cdf(1.0)=" << result.computeCDF(1.0) << std::endl;
+    // so we do it by hand
+    {
+      Collection<Distribution> coll(2);
+      coll[0] = Weibull();
+      coll[1] = Exponential();
+      Point weights(2);
+      weights[0] = -1.0;
+      weights[1] =  1.0;
+      result = RandomMixture(coll, weights);
+      fullprint << "result=" << result << std::endl;
+      fullprint << "cdf(1.0)=" << result.computeCDF(1.0) << std::endl;
+    }
+    // X-Y
+    result = Weibull() - Exponential();
+    fullprint << "result=" << result << std::endl;
+    fullprint << "cdf(1.0)=" << result.computeCDF(1.0) << std::endl;
+    // -X-Y->bug using operators, as -X returns a smart pointer,
+    // which is promoted into a Scalar by +!
+    //result = Weibull() * (-1.0) - Exponential();
+    //fullprint << "result=" << result << std::endl;
+    //fullprint << "cdf(-1.0)=" << result.computeCDF(-1.0) << std::endl;
+    // so we do it by hand
+    {
+      Collection<Distribution> coll(2);
+      coll[0] = Weibull();
+      coll[1] = Exponential();
+      Point weights(2);
+      weights[0] = -1.0;
+      weights[1] = -1.0;
+      result = RandomMixture(coll, weights);
+      fullprint << "result=" << result << std::endl;
+      fullprint << "cdf(-1.0)=" << result.computeCDF(-1.0) << std::endl;
+    }
   }
   catch (TestFailed & ex)
   {
