@@ -33,3 +33,11 @@ logn*logn:class=LogNormal name=LogNormal dimension=1 muLog=0 sigmaLog=1.41421 ga
 logu*logu:class=CompositeDistribution name=CompositeDistribution function=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] antecedent=class=RandomMixture name=RandomMixture distribution collection=[class=Triangular name=Triangular dimension=1 a=-2 m=0 b=2] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1] constant=class=Point name=Unnamed dimension=1 values=[0] bounds=class=Point name=Unnamed dimension=2 values=[-2,2] values=class=Point name=Unnamed dimension=2 values=[0.135335,7.38906] probabilities=class=Point name=Unnamed dimension=2 values=[0,1] increasing=[1]
 logu*logn:class=CompositeDistribution name=CompositeDistribution function=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] antecedent=class=RandomMixture name=RandomMixture distribution collection=[class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1],class=Uniform name=Uniform dimension=1 a=-1 b=1] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[1,1] constant=class=Point name=Unnamed dimension=1 values=[0] bounds=class=Point name=Unnamed dimension=2 values=[-8.65063,8.65063] values=class=Point name=Unnamed dimension=2 values=[0.000175017,5713.73] probabilities=class=Point name=Unnamed dimension=2 values=[0,1] increasing=[1]
 logn*logu:class=CompositeDistribution name=CompositeDistribution function=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x] outputVariablesNames=[y0] formulas=[exp(x)] antecedent=class=RandomMixture name=RandomMixture distribution collection=[class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1],class=Uniform name=Uniform dimension=1 a=-1 b=1] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[1,1] constant=class=Point name=Unnamed dimension=1 values=[0] bounds=class=Point name=Unnamed dimension=2 values=[-8.65063,8.65063] values=class=Point name=Unnamed dimension=2 values=[0.000175017,5713.73] probabilities=class=Point name=Unnamed dimension=2 values=[0,1] increasing=[1]
+result=class=RandomMixture name=RandomMixture distribution collection=[class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0,class=Exponential name=Exponential dimension=1 lambda=1 gamma=0] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[1,1] constant=class=Point name=Unnamed dimension=1 values=[0]
+cdf(1.0)=0.264241
+result=class=RandomMixture name=RandomMixture distribution collection=[class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0,class=Exponential name=Exponential dimension=1 lambda=1 gamma=0] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[-1,1] constant=class=Point name=Unnamed dimension=1 values=[0]
+cdf(1.0)=0.81606
+result=class=RandomMixture name=RandomMixture distribution collection=[class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0,class=Exponential name=Exponential dimension=1 lambda=1 gamma=0] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[1,-1] constant=class=Point name=Unnamed dimension=1 values=[0]
+cdf(1.0)=0.81606
+result=class=RandomMixture name=RandomMixture distribution collection=[class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0,class=Exponential name=Exponential dimension=1 lambda=1 gamma=0] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=2 values=[-1,-1] constant=class=Point name=Unnamed dimension=1 values=[0]
+cdf(-1.0)=0.735759
